--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <i class="fa-brands fa-discord"></i>
         </a>
 
+        <a href="https://youtu.be/woseSxfzoag?si=UkIbJ03lPUwa033C">
+            <i class="fa-brands fa-youtube"></i>
+        </a>
+
         <a href="https://instagram.com/bb4rroo?igsh=aGRvdHEzd2h5YmZr">
             <i class="fa-brands fa-instagram"></i>
         </a>
